# chessie

./: .gitignore  Cargo.toml  Contributing.md  Readme.md
.github/workflows/: rust.yml
src/: board_detector.rs  chessie.rs  conversions.rs  homography.rs  lib.rs  main.rs  parser.rs  pt.rs  types.rs  utils.rs
src/chessie/: detector.rs  homography.rs  mod.rs  preprocesor.rs  transformator.rs
src/detector/: mod.rs
src/dev/: colors.rs  conversions.rs  drawing.rs  mod.rs
src/pt/: mod.rs
src/utl/: colors.rs  image_ext.rs  mod.rs  ndarray_ext.rs  plotly_ext.rs  point_ext.rs  traits.rs
