[package]
name = "chessie"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.40"
clap = { version = "4.4", features = ["derive"] }
itertools = "0.10.5"
image = "0.24.7"
imageproc = "0.23.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
ndarray-linalg = "0.13.1"
num = "0.4.0"
plotly = { version = "0.8.1", features = ["plotly_ndarray"] }
rand = "0.8.5"
serde = "1.0.147"
