[package]
name = "chessie"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.40"
arrsac = { version = "0.10.0" }
clap = { version = "4.4", features = ["derive"] }
image = "0.24.7"
imageproc = "0.23.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
nalgebra = "0.30.1"
ndarray = "0.15.6"
ndarray-linalg = "0.13.1"
ndarray-stats = "0.5.1"
num = "0.4.0"
plotly = { version = "0.8.1", features = ["plotly_ndarray"] }
rand = "0.8.5"
rand_pcg = { version = "0.3.1" }
sample-consensus = "1.0.2"
serde = "1.0.147"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
