[package]
name = "chessie"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
arrsac = { version = "0.10.0" }
clap = { version = "4.5", features = ["derive"] }
image = "0.24.7"
imageproc = "0.23.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
nalgebra = "0.32.3"
rand = "0.8.5"
rand_pcg = { version = "0.3.1" }
sample-consensus = "1.0.2"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
